Fixed: Large screen video style on mobile.

--- a/web/css/main.css
+++ b/web/css/main.css
@@ -257,6 +257,7 @@ body {
 }
 
 .mainWedeoContainer.large {
+  flex-direction: unset;
   height: 100vh;
   width: 100vw;
   margin-top: 0;
